welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:6: error: value et is not a member of Boolean
	case (x,y,z) if {negative==true & a<0 et b>0} => return false
                                              ^